# octane-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  octane  octane.pub
art/Debug/: UnitinitializedTexture.psd
art/Enemies/: Bear.blend  Bear.blend1  Bunny.blend  Bunny.blend1  Duck.blend  Duck.blend1  Trex.blend  Trex.blend1
art/Environment/: Buildings.blend  Buildings.blend1  Props.blend  Props.blend1  Rocks.blend  Rocks.blend1  SpiralDuct.blend  SpiralDuct.blend1  Trees.blend  Trees.blend1
art/UI/: Crosshair1.blend  Reticle1.blend  Reticle1.blend1
art/Weapons/: CardboardCrossbow.blend  CardboardCrossbow.blend1  Guns.blend  Guns.blend1  PaperPlane.blend  PaperPlane.blend1  RoundShield.blend  RoundShield.blend1  Shuriken.blend  Shuriken.blend1  Slingshot.blend  Slingshot.blend1  Sword.blend  Sword.blend1  Sword.mb
art/Weapons/.mayaSwatches/: Sword.mb.swatches
assets/: meshes.nbt
assets/maps/: level1.nbt  level1_old.nbt
assets/models/: BeachBall.fbx  Bear.fbx  Blimp.fbx  Bunny.fbx  Coconut.fbx  Crossbow.fbx  Crosshair1.fbx  Duck.fbx  Firepit.fbx  Palm1.fbx  Palm2.fbx  Palm3.fbx  Palm4.fbx  Palm5.fbx  Palm6.fbx  Palm7.fbx  PaperPlane.fbx  PaperPlane.mtl  Payload.fbx  Rock1.fbx  Rock10.fbx  Rock11.fbx  Rock12.fbx  Rock13.fbx  Rock14.fbx  Rock15.fbx  Rock2.fbx  Rock3.fbx  Rock4.fbx  Rock5.fbx  Rock6.fbx  Rock7.fbx  Rock8.fbx  Rock9.fbx  RoundShield.fbx  Semiauto1.fbx  Slingshot.fbx  Sniper1.fbx  SpiralDuct.fbx  Structure1.fbx  (+6 more)
assets/shaders/: UI.hlsl  phong.hlsl  phongUI.hlsl
assets/soundbanks/: Init.bnk  Init.txt  Main.bnk  Main.txt  PluginInfo.xml  SoundbanksInfo.xml  Wwise_IDs.h
contact/: brayan.lopez.txt  dante.chiesa.txt  dylan.pautler.txt  jangseok.han.txt  jiwon.jung.txt  lowell.n.txt  william.fang.txt  zach.rammell.txt
libraries/Wwise/: AkDefaultIOHookBlocking.h  AkDefaultIOHookDeferred.cpp  AkDefaultIOHookDeferred.h  AkFileHelpers.h  AkFilePackageLowLevelIOBlocking.h
libraries/Wwise/AK/: AkPlatforms.h  AkWwiseSDKVersion.cs  IBytes.h
libraries/Wwise/AK/Comm/: AkCommunication.h
libraries/Wwise/AK/DSP/: AkApplyGain.h  AkDelayLineMemory.h  AkDelayLineMemoryStream.h  AkModulatorProcess.h  AkVolAutomation.h
libraries/Wwise/AK/Plugin/: AkAudioInputPlugin.h  AkAudioInputSourceFactory.h  AkCompressorFXFactory.h  AkDelayFXFactory.h  AkExpanderFXFactory.h  AkFlangerFXFactory.h  AkGainFXFactory.h  AkGuitarDistortionFXFactory.h  AkHarmonizerFXFactory.h  AkMatrixReverbFXFactory.h  AkMeterFXFactory.h  AkMotionGeneratorSourceFactory.h  AkMotionSinkFactory.h  AkMotionSourceSourceFactory.h  AkOpusDecoderFactory.h  AkParametricEQFXFactory.h  AkPeakLimiterFXFactory.h  AkPitchShifterFXFactory.h  AkRecorderFXFactory.h  AkReflectFXFactory.h  AkReflectGameData.h  AkRoomVerbFXFactory.h  AkSilenceSourceFactory.h  AkSineSourceFactory.h  AkSinkFactory.h  AkSoundSeedImpactFXFactory.h  AkSoundSeedWindSourceFactory.h  AkSoundSeedWooshSourceFactory.h  AkStereoDelayFXFactory.h  AkSynthOneSourceFactory.h  AkTimeStretchFXFactory.h  AkToneSourceFactory.h  AkTremoloFXFactory.h  AkVorbisDecoderFactory.h  AllPluginsFactories.h  AllPluginsRegistrationHelpers.h  AuroHeadphoneFXFactory.h  McDSPFutzBoxFXFactory.h  McDSPLimiterFXFactory.h  iZHybridReverbFXFactory.h  (+6 more)
libraries/Wwise/AK/SoundFrame/: SF.h  SFObjects.h
libraries/Wwise/AK/Wwise/: AudioPlugin.h  IXmlTextReader.h  IXmlTextWriter.h  (+4 more)
licenses/libraries/Wwise/: Academic License Agreement.html
source/: .clang-format
source/OctaneEngine/: Audio.cpp  Audio.h  AudioPlayer.cpp  AudioPlayer.h  BehaviorComponent.h  BehaviorSys.cpp  BehaviorSys.h  ComponentSys.cpp  ComponentSys.h  EASTLImplementations.cpp  EASTLImplementations.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityID.h  EntitySys.cpp  EntitySys.h  FormattedOutput.cpp  FormattedOutput.h  FramerateController.cpp  FramerateController.h  Heath.cpp  Heath.h  Helper.h  IScene.h  ISystem.h  ImGuiSys.cpp  ImGuiSys.h  InputHandler.cpp  InputHandler.h  MassData.h  Math.h  MemoryManager.cpp  MemoryManager.h  NBTReader.cpp  NBTReader.h  NBTSpecializations.cpp  NBTSpecializations.h  NBTWriter.cpp  (+33 more)
source/OctaneEngine/Components/: BehaviorComponent.h  MetadataComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  RenderComponent.h  TransformComponent.h
source/OctaneEngine/Graphics/: Camera.cpp  Camera.h  CameraSys.cpp  CameraSys.h  Colors.cpp  Colors.h  GraphicsDeviceDX11.cpp  GraphicsDeviceDX11.h  Material.cpp  Material.h  Mesh.h  MeshSys.cpp  MeshSys.h  OBJParser.cpp  OBJParser.h  RenderDX11.cpp  RenderDX11.h  RenderSys.cpp  RenderSys.h  Shader.h  Texture.cpp  Texture.h  TextureSys.cpp  TextureSys.h
source/OctaneEngine/Physics/: BoundingAABB.cpp  BoundingAABB.h  Box.cpp  Box.h  BroadPhase.cpp  BroadPhase.h  Capsule.cpp  Capsule.h  Constraints.h  ContactConstraints.cpp  ContactConstraints.h  DragForce.cpp  DragForce.h  Ellipsoid.cpp  Ellipsoid.h  Force.h  GlobalGravityForce.cpp  GlobalGravityForce.h  MassData.h  NarrowPhase.cpp  NarrowPhase.h  PhysicsDef.h  PhysicsSys.cpp  PhysicsSys.h  Polytope.cpp  Polytope.h  Primitive.cpp  Primitive.h  PrimitivePair.h  ResolutionPhase.cpp  ResolutionPhase.h  RigidBody.cpp  RigidBody.h  Shape.h  Simplex.cpp  Simplex.h  SupportPoint.cpp  SupportPoint.h  Truncated.cpp  Truncated.h  (+2 more)
source/OctaneEngine/Scenes/: MenuScene.cpp  MenuScene.h  SceneDefs.h  SerializationTestScene.cpp  SerializationTestScene.h  TestScene.cpp  TestScene.h
source/OctaneEngine/behaviors/: AbilityHomingBhv.cpp  AbilityHomingBhv.h  AbilityTunnelBhv.cpp  AbilityTunnelBhv.h  BearBehavior.cpp  BearBehavior.h  BunnyBehavior.cpp  BunnyBehavior.h  DuckBehavior.cpp  DuckBehavior.h  EnemyBehaviorCommon.cpp  EnemyBehaviorCommon.h  EnemySpawner.cpp  EnemySpawner.h  IBehavior.h  PlaneBehavior.cpp  PlaneBehavior.h  TemporaryBehavior.cpp  TemporaryBehavior.h  WindTunnelBhv.cpp  WindTunnelBhv.h
source/OctaneGame/: main.cpp
source/OctaneTest/Helper/: TestFloat.h  TypeWithSize.h
source/experiments/: Serializer.cpp  Serializer.h
source/project-octane/: MemoryManager.cpp  MemoryManager.h  mass_data.h  math.h  project-octane.cpp  rigidbody.cpp  rigidbody.h
(+222 files in other folders)
